fix carousel button overflow on some browsers (e.g. edge 13)

--- a/themes/finna/less/bootstrap/finna/finna-feed.less
+++ b/themes/finna/less/bootstrap/finna/finna-feed.less
@@ -1,5 +1,8 @@
 /* Carousel styling */
 .carousel {
+    & button {
+        overflow: hidden; // prevent scrollbars appearing with some browsers   
+    }
     & .slick-slider {
         padding: 0px;   
     }
